8224509: Incorrect alignment in CDS related allocation code on 32-bit platforms

Reviewed-by: iklam, stuefe